[FIX] 질문상세 api 속 질문생성자 account 정보 간소화
- 기존: question entity를 그대로 반환
- 변경: questionRes형으로 변경하여 password등이 포함되지 않도록 함